# internal/handler/trip/init.go
@@ -12,6 +12,7 @@ type Handler interface {
 	UpdatePosition(ctx context.Context, req *dto.UpdatePositionRequest) (*dto.PositionResponse, error)
 	GetMemberPosition(ctx context.Context, req *dto.GetMemberPositionRequest) (*dto.PositionResponse, error)
 	GetPartyPositions(ctx context.Context, req *dto.GetPartyPositionsRequest) (*dto.PositionsResponse, error)
+	UpdateTripStatus(ctx context.Context, req *dto.UpdateTripStatusRequest) (*dto.PartyMemberResponse, error)
 }
 
 type handlerImpl struct {
